# otma-pin-re

./: .gitignore  README.md
artifacts/: pin_summary.json
base_project/hdl/: base_project.sv
base_project/ip_cores/: io_tester.qsys
base_project/project/: base_project.qsf
base_project/scripts/: compile.sh
base_project_sstl_in/hdl/: base_project.sv
base_project_sstl_in/project/: base_project.qsf  base_project.srf
resources/: 5sgsd5.txt  pin_list_5SGSMD5K1F40C1_3C.txt  pin_list_5SGSMD5K1F40C1_8A.txt  pin_list_5SGSMD5K1F40C1_8AD.txt  pin_list_5SGSMD5K1F40C1_8BC.txt  pin_list_5SGSMD5K1F40C1_full.txt  pin_list_test.txt
results/: .gitignore  placeholder.txt
scripts/: .gitignore  conv_to_jic.cof.template  eco.tcl.template  gen_bitstreams.py
scripts/bitstream_analysis/: 01_factory_bitstream_analysis.ipynb  02_crc_checksum.ipynb  03_jic_format.ipynb  04_jic_decompression.ipynb
scripts/extract_pin_addr/: 01_get_pu_addr.ipynb  02_get_blk_addr.ipynb  02_get_sstl_addr-Copy1.ipynb  03_extract_io_std.ipynb  03a_extract_io_std_diff.ipynb  04_classification.ipynb  05_classification_manual.ipynb  06_validation.ipynb  07_application.ipynb  CMakeLists.txt  IDX_OUT_DT.p  IOclassifier.py  JicBitstream.py  extract_pin_addr.cpp  get_pu_addr.ipynb  get_series_term_from_jic.cpp  knowledge.hpp  knowledge.py  knowledge2.py  out_std_dtc.p  test_01-extract_pin_addr.ipynb  test_02-single-bit-change.ipynb  test_03-checksum_addr.ipynb
scripts/extract_pin_addr/src/: JicBitDiff.hpp  JicBitstream.hpp  extract_pin_addr.cpp  knowledge.hpp
work/: .gitignore  placeholder.txt
(+32 files in other folders)
